--- a/Snapgram/Snapgram/Info.plist
+++ b/Snapgram/Snapgram/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Tryll would like access to your photos!</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Tryll would like to use your camera please!</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -19,7 +23,7 @@
 	<key>CFBundleShortVersionString</key>
 	<string>1.0</string>
 	<key>CFBundleVersion</key>
-	<string>1</string>
+	<string>8</string>
 	<key>LSApplicationCategoryType</key>
 	<string></string>
 	<key>LSRequiresIPhoneOS</key>
@@ -29,8 +33,6 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string></string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Pacifico.tft</string>
@@ -51,7 +53,6 @@
 		<string>SF-Pro-Display-Thin.otf</string>
 		<string>SF-Pro-Display-ThinItalic.otf</string>
 		<string>SF-Pro-Display-Ultralight.otf</string>
-		<string>SF-Pro-Display-UltralightItalic.otf</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>SplashScreen</string>
