--- a/Snapgram/Info.plist
+++ b/Snapgram/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Allow Tryll to access your photos</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Allow Tryll to access your camera</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
@@ -29,10 +33,6 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
-	<key>NSCameraUsageDescription</key>
-	<string>Tryll would like to use your camera please!</string>
-	<key>NSPhotoLibraryUsageDescription</key>
-	<string>Tryll would like access to your photos!</string>
 	<key>UIAppFonts</key>
 	<array>
 		<string>Pacifico.tft</string>
